--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "start": "nodemon app.js"
   },
   "dependencies": {
+    "@huggingface/transformers": "^3.7.1",
+    "@langchain/community": "^0.3.50",
+    "@langchain/core": "^0.3.70",
+    "@supabase/supabase-js": "^2.55.0",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
+    "dotenv": "^16.4.5",
     "express": "^5.1.0",
     "nodemon": "^3.1.10"
   }
